# esp32example

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  make_ota_image_c3  make_ota_image_wroom32
src/: apiserver.rs  config.rs  display.rs  lib.rs  measure.rs  mqtt.rs  state.rs  wifi.rs  ws2812.rs
static/: form.js  index.css
templates/: index.html.ask
